--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -7,7 +7,7 @@ webdriver {
 }
 
 chrome {
-  switches = "--headless=new;--incognito;--disable-gpu;--window-size=1920,1080;--remote-allow-origins=*;--ignore-certificate-errors;--disable-extensions;--no-sandbox;--disable-dev-shm-usage;--disable-popup-blocking"
+  switches = "--incognito;--disable-gpu;--window-size=1920,1080;--remote-allow-origins=*;--ignore-certificate-errors;--disable-extensions;--no-sandbox;--disable-dev-shm-usage;--disable-popup-blocking"
 }
 
 serenity {
